# zk-mastermind

./: Cargo.toml
src/: code_circuit.rs  consts.rs  crypto.rs  guess_circuit.rs  host.rs  main.rs  proof.rs  utils.rs
