[package]
name = "zk-mastermind"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.76"
publish = false

[dependencies]
eframe = "0.27.1"
egui = "0.27.2"
egui_extras = { version = "0.27.2", features = ["default", "image"] }
env_logger = "0.11.3"
rand = "0.8.5"
regex = "1.10.5"
itertools = "0.13.0"
lazy_static = "1.4.0"
ark-bls12-381 = "0.4.0"
ark-groth16 = "0.4.0"
ark-std = "0.4.0"
ark-snark = "0.4.0"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-relations = "0.4.0"
sha2 = "0.10.8"
ark-r1cs-std = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["crh", "r1cs"] }
ark-ed-on-bls12-381 = { version = "0.4.0", features = ["r1cs"] }

